--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,28 @@
 :root {
+  --blue: #194483;
   --dark-blue: #1d3f59;
   --light-blue: #59abe3;
   --green: #6fc381;
+  --dark-green: #5ea26d;
   --shadow: #0000002d;
 }
 body {
   font-family: "Open Sans", sans-serif;
+}
+h1 {
+  color: var(--blue);
+  font-weight: 700;
+  font-size: 2rem;
+}
+h2 {
+  color: var(--blue);
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+h3 {
+  color: black;
+  font-weight: 400;
+  font-size: 1.75rem;
 }
 /* Sizes
   xs: 0,
@@ -50,4 +67,32 @@ body {
     font-weight: 600;
     text-transform: uppercase;
   }
+}
+
+/* Index */
+@media (min-width: 992px) {
+  .hero {
+    height: 90vh;
+    background-image: url("../img/index/landing.png");
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+  }
+  .hero-title {
+    font-size: 2.5rem;
+  }
+}
+.btn-rush {
+  font-weight: 600;
+  text-decoration: none;
+  letter-spacing: 1px;
+  padding: 10px 32px;
+  border-radius: 4px;
+  color: white;
+  background: var(--green);
+  transition: 0.5s;
+}
+.btn-rush:hover {
+  color: white;
+  background: var(--dark-green);
 }
