--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,10 @@ h4 {
 .bg-gray {
   background: var(--light-gray);
 }
+.scroll {
+  padding-top: 100px;
+  margin-top: -100px;
+}
 
 /* Navbar */
 .navbar {
