--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,7 +187,7 @@ h4 {
   position: relative;
 }
 .active-item {
-  width: 20%;
+  /* width: 100%; */
   padding: 0.5rem;
 }
 .active-img figure img {
@@ -208,10 +208,10 @@ h4 {
 .active-item:hover .overlay {
   opacity: 0.8;
 }
-.fa-linkedin {
+.fa-linkedin::before {
   color: white;
   position: absolute;
-  bottom: 20%;
+  bottom: 30%;
   left: 50%;
   transform: translate(-50%, -30%);
   text-align: center;
@@ -227,11 +227,11 @@ h4 {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-@media screen and (max-width: 800px) {
+@media (max-width: 800px) {
   .text {
     font-size: 12px;
   }
-  .fa-linkedin {
-    height: 12px;
+  .fa-linkedin::before {
+    font-size: 12px;
   }
 }
