--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,9 +218,25 @@ h4 {
   transform: translate(-50%, -50%);
   text-align: center;
 }
-@media (max-width: 800px) {
-  .text,
+@media (max-width: 768px) {
+  .text {
+    font-size: 12px;
+  }
   .fa-linkedin::before {
     font-size: 24px;
   }
+}
+@media (min-width: 768px) {
+  .carousel-inner .carousel-item-end.active,
+  .carousel-inner .carousel-item-next {
+    transform: translateX(16.6%);
+  }
+  .carousel-inner .carousel-item-start.active,
+  .carousel-inner .carousel-item-prev {
+    transform: translateX(-16.6%);
+  }
+}
+.carousel-inner .carousel-item-end,
+.carousel-inner .carousel-item-start {
+  transform: translateX(0);
 }
