--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,17 +226,6 @@ h4 {
     font-size: 24px;
   }
 }
-@media (min-width: 768px) {
-  .carousel-inner .carousel-item-end.active,
-  .carousel-inner .carousel-item-next {
-    transform: translateX(16.6%);
-  }
-  .carousel-inner .carousel-item-start.active,
-  .carousel-inner .carousel-item-prev {
-    transform: translateX(-16.6%);
-  }
-}
-.carousel-inner .carousel-item-end,
-.carousel-inner .carousel-item-start {
-  transform: translateX(0);
+#carousel {
+  height: auto;
 }
