--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,12 +202,11 @@ h4 {
   left: 50%;
   transform: translate(-50%, -30%);
   text-align: center;
-  font-size: 2.5vw;
+  font-size: 2.5rem;
 }
 .text {
-  font-family: var(--font-body);
   color: white;
-  font-size: 1.2vw;
+  font-size: 1.2rem;
   position: absolute;
   top: 40%;
   left: 50%;
