--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,11 @@ h4 {
   padding-top: 100px;
   margin-top: -100px;
 }
+@media (min-width: 992px) {
+  .container {
+    width: 75%;
+  }
+}
 
 /* Navbar */
 .navbar {
